Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102359

NTLM authentication crashes

XMLWordPrintable

    • Windows
    • c684b8e939 (qt/qtbase/dev) c684b8e939 (qt/tqtc-qtbase/dev) 0f7390e410 (qt/qtbase/6.4) 0f7390e410 (qt/tqtc-qtbase/6.4) 323f103456 (qt/qtbase/6.3) 323f103456 (qt/tqtc-qtbase/6.3) ad1988934e (qt/tqtc-qtbase/6.2) 485c7a8256 (qt/tqtc-qtbase/5.15)

      App crashing when logging with LDAP user not in group.

      PC is logged in as domain user but domain user is not in LDAP Users group on server.

      1. Start app, does not enter any credentials since we use SSO.
      2. App starting do login
      3. App crash

       

      Call stack:

      sspicli.dll!InitializeSecurityContextCommon(struct _SecHandle *,struct _SecHandle *,void *,unsigned long,unsigned long,unsigned long,struct _SecBufferDesc *,unsigned long,struct _SecHandle *,struct _SecBufferDesc *,unsigned long *,union _LARGE_INTEGER *,unsigned char) Unknown
       sspicli.dll!_InitializeSecurityContextW@48() Unknown
       Qt5Network.dll!qSspiContinue(QAuthenticatorPrivate * ctx, QAuthenticatorPrivate::Method method, const QString & host, const QByteArray & challenge) Line 1587 C++
       Qt5Network.dll!QAuthenticatorPrivate::calculateResponse(const QByteArray & requestMethod, const QByteArray & path, const QString & host) Line 557 C++
       > Qt5Network.dll!QHttpNetworkConnectionPrivate::createAuthorization(QAbstractSocket * socket, QHttpNetworkRequest & request) Line 596 C++
       Qt5Network.dll!QHttpProtocolHandler::sendRequest() Line 316 C++
       Qt5Core.dll!QMetaCallEvent::placeMetaCall(QObject * object) Line 623 C++
       Qt5Core.dll!QObject::event(QEvent * e) Line 1340 C++
       Qt5Widgets.dll!QApplicationPrivate::notify_helper(QObject * receiver, QEvent * e) Line 3685 C++
       Qt5Widgets.dll!QApplication::notify(QObject * receiver, QEvent * e) Line 3640 C++
       Qt5Core.dll!QCoreApplication::notifyInternal2(QObject * receiver, QEvent * event) Line 1075 C++
       [Inline Frame] Qt5Core.dll!QCoreApplication::sendEvent(QObject *) Line 1470 C++
       Qt5Core.dll!QCoreApplicationPrivate::sendPostedEvents(QObject * receiver, int event_type, QThreadData * data) Line 1815 C++
       Qt5Core.dll!QEventDispatcherWin32::sendPostedEvents() Line 1051 C++
       Qt5Core.dll!QEventDispatcherWin32::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 525 C++
       [Inline Frame] Qt5Core.dll!QEventLoop::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag>) Line 138 C++
       Qt5Core.dll!QEventLoop::exec(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 225 C++
       Qt5Core.dll!QThread::exec() Line 536 C++
       Qt5Core.dll!QThreadPrivate::start(void * arg) Line 407 C++
       [External Code]

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            manordheim Mårten Nordheim
            kirill_balanchevadze Kirill Kirill
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes